Remove is AI gateway property and add gateway type enum
